# Fast-Feedback-Loop-Local

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  RUN_MTS_EXP.bat  input.json  newexport.json  pyproject.toml
Next_repo/examples/matchbox_interfaces_app/: CMakeLists.txt  main.cpp
Next_repo/examples/rec_generator/: CMakeLists.txt  generated_rec.sdl  packages.txt
Next_repo/examples/simulation_node_example/: CMakeLists.txt  main.cpp  test_signal.sdl
Next_repo/src/sdk/sdk/: CMakeLists.txt
Next_repo/tests/unit/sdk/: CMakeLists.txt
Next_repo/tests/unit/udex/: CMakeLists.txt
examples/subscriber_app/: CMakeLists.txt  main.cpp
examples/test_component/: CMakeLists.txt  main.h  test_component.hpp
examples/test_component/GUI_Configs/: 1_Backend_Config.json  3_Plugins_and_widgets_config.json  4_exact_exporter_cfg.json  4_latest_exporter_cfg.json  4_nearest_exporter_cfg.json
src/: CMakeLists.txt
src/bridges/bridgesdk/: CMakeLists.txt  dummy.cpp  write_bfbs_to_header.cmake
src/bridges/bridgesdk/Plugin/: plugin_3D_view.cpp  plugin_datapublisher.cpp  plugin_private.h  plugin_regex_searcher.cpp  plugin_signal_explorer_impl.hpp  plugin_signal_extractor.cpp  plugin_signal_extractor_impl.cpp  plugin_signal_extractor_impl.hpp  regex_helper.hpp
src/bridges/bridgesdk/WebServer/: web_server_impl.cpp
src/bridges/controlbridge/: CMakeLists.txt  main.cpp
src/bridges/controlbridge/CommandHandler/: gui_command_parser.cpp  gui_command_parser.h  player_control_manager.cpp  player_control_manager.h
src/bridges/controlbridge/ConfigManager/: config_manager.h
src/bridges/controlbridge/EventHandler/: player_event_distributor.h  version_info_event_distributor.h
src/bridges/controlbridge/LifeCycleOrchestrator/: lifecycle_orchestrator.cpp
src/bridges/controlbridge/http_post/: http_post.cpp  websocket_client_async.hpp
src/bridges/controlbridge/log_distributor/: log_distributor.cpp  log_distributor.hpp
src/bridges/controlbridge/status_code_manager/: status_code_evaluator.hpp  status_code_manager.hpp
src/bridges/controlbridge/status_queue_manager/: condition.hpp  condition_handler.cpp  status_queue_manager.cpp  status_queue_manager.hpp
src/bridges/databridge/: CMakeLists.txt  main.cpp
src/bridges/databridge/DataClassManager/: data_class_manager.cpp  event_handler_helper.cpp  json_to_plugin_config.cpp  json_to_plugin_config.h  next_ui_config_request_handler.cpp  next_ui_config_request_handler.h  next_ui_update_request_handler.h
src/bridges/databridge/DataManager/: data_manager_impl.cpp  data_manager_impl.hpp
src/bridges/databridge/PluginManager/: plugin_config_handler.cpp  process_manager.cpp
src/bridges/plugins/: CMakeLists.txt
src/cmake/: cmake_variables.cmake  documentation_code.cmake  install_lib.cmake  install_python_api.cmake
src/control/: CMakeLists.txt
src/control/src/: lib_version.cpp
src/control/src/event_control/: orchestrator_event_binary.cpp  player_command.cpp  player_state_event.cpp
src/control/src/log_collector/: log_collector_impl.cpp  log_collector_impl.hpp  rotating_file_sink_log_event_data.cpp  rotating_file_sink_log_event_data.hpp
src/control/src/orchestrator/: orchestrator_client_impl.cpp  orchestrator_client_impl.h  orchestrator_master.cpp  orchestrator_master_impl.h
src/next/src/: CMakeLists.txt
src/next/src/container/: CMakeLists.txt  container_main.cpp
src/next/src/next_interface/: config.h.in  next_callbacks.cpp  next_impl.cpp  next_impl.hpp  next_inport.hpp  next_outport.hpp  next_system_service.hpp
src/player/: CMakeLists.txt
src/player/conf/: player_example_base_control_data.json
src/player/src/: config.hpp.in  main.cpp  play_manager.cpp
src/player/src/reader/: file_reader.hpp  reader_manager.cpp  reader_synchronizer.cpp  reader_synchronizer.hpp
src/player/src/resource_manager/: cycle_manager.hpp  resource_manager.cpp  udex_service.hpp
src/player/src/sdk_deprecated/: threadsafe_queue.hpp
src/player/src/state_machine/: error_codes.hpp  player_state_machine.cpp  player_state_machine.hpp
src/py_api/next_py_api/api_utils/: next_process_handler.py
src/scripts/: start_next_application.py.in  start_project_executable.py.in
src/sdk/: CMakeLists.txt
src/sdk/appsupport/: CMakeLists.txt  config.h.in
src/sdk/appsupport/src/: cmd_options.cpp  startup.cpp
src/sdk/sdk/src/: log_router.hpp  logger.cpp  shutdown_handler.cpp  simple_init_chain.cpp
src/udex/: CMakeLists.txt
src/udex/src/: udex_manager.cpp  udex_manager.hpp
src/udex/src/explorer/: signal_explorer.cpp
src/udex/src/extractor/: isync_method.h  package_tree_extractor.cpp  sync_algo.h  udex_queue.h
src/udex/src/publisher/: core_lib_hash_manager.hpp  data_publisher.cpp  hash_manager.hpp
src/udex/src/signal_storage/: core_lib_wrap_data_converter.hpp  core_lib_wrap_data_descriptor_parser.hpp  signal_description_handler.cpp  signal_description_handler.h  signal_tree_module.cpp  signal_tree_module.h  signal_watcher.cpp  url_helper.hpp
src/udex/src/subscriber/: data_subscriber_impl.cpp  data_subscriber_impl.h
tests/component/sdk/cxx_std_test/: CMakeLists.txt  def_cxx_std.hpp
tests/component/sdk/initchain/: CMakeLists.txt  initchain_test.cpp  random_generator.cpp  random_generator.hpp
tests/component/sdk/profiler/: CMakeLists.txt  profiling_library.cpp
tests/ecal_performancetest/: CMakeLists.txt  common.hpp  performancetest.cpp  publisher.hpp  sleep.hpp
tests/unit/bridges/databridge/: CMakeLists.txt
tests/unit/player/: CMakeLists.txt
tests/unit/player/argument_setup_test/: CMakeLists.txt
tests/unit/player/buffer_queue_test/: CMakeLists.txt  buffer_queue_test.cpp
tests/unit/player/cycle_manager_test/: CMakeLists.txt
tests/unit/player/data_publisher_test/: CMakeLists.txt  data_publisher_test.cpp
tests/unit/player/trigger_handler_test/: CMakeLists.txt
tests/unit/sdk/config_comp_data/: CMakeLists.txt  config_comp_data_test.cpp
tests/unit/sdk/events/: CMakeLists.txt
tests/unit/simple_ifc/: CMakeLists.txt  node_conf.json  simple_ifc.cpp  test_signal.sdl  test_signal2.sdl  test_signal3.sdl
(+3675 files in other folders)
